# cpp-template

./: .gitignore  CMakeLists.txt  README.md  make
include/core/: MyObject.hpp
src/: main.cpp
src/core/: MyObject.cpp
